Fixing breadcrumb vertical alignment

--- a/dev/assets/style_optimized.css
+++ b/dev/assets/style_optimized.css
@@ -872,6 +872,12 @@ nav a {
   font-weight: 500;
   padding: 0.25rem 0.25rem 0.05rem;
   line-height: 150%;
+  vertical-align: top;
+}
+
+nav .breadcrumb_sep {
+  vertical-align: -webkit-baseline-middle;
+  vertical-align: baseline;
 }
 
 nav a span {
